assignment/assets/css/main.css
body{
    margin: 0;
    text-align: center;
    box-sizing: border-box;
    font-family: 'Times New Roman', Times, serif;
    color: aliceblue;
}


.titleHead a{
    color:#db9509;
    text-decoration: none; 
}


.titleHead{
    display: flex;
    height: 15vh;
    background-color: #4A3343;
    width: 100%;
}

.titleHead h4{
    color: #FBBE43;
}

.titleHead img{
    height: 60%;
    width: auto;
    margin-top: 20px;
    margin-left: 20px;
}

.TitleBoxContainer{
    display: flex;
    justify-content: flex-end;
    font-size: 100%;
    line-height: 10%;
    width: 100%;
    margin-right: 2%;

}

.TitleBoxContainer > div{
    text-align: center;
    height: 78%;
    width: 180px;
    font-size: 15px;
    font-family: sans-serif;

}

.titleBox1:hover h4,
.titleBox2:hover h4,
.titleBox3:hover h4,
.titleBox4:hover h4,
.titleBox5:hover h4{
    color: black;
}

.titleBox1{
    background-color: #4A3343;
    padding-top: 2%;
    grid-template-columns: 1;
    background-color: #4A3343;
}
.titleBox1:hover{
    background-color: pink;
    color: black;
}

.titleBox2{
    background-color: #4A3343;
    padding-top: 2%;
    grid-template-columns: 2;
}
.titleBox2:hover{
    background-color: orange;
    color: black;
}

 .titleBox3{
    background-color: #4A3343;
     padding-top: 2%;
    grid-template-columns: 3;   
}
.titleBox3:hover{
    background-color: yellow;
    color: black;
}

 .titleBox4{
    background-color: #4A3343;
     padding-top: 2%;
    grid-template-columns: 4;
}
.titleBox4:hover{
    background-color: aquamarine;
    color: black;
}
.titleBox5{
    background-color: #4A3343;
    padding-top: 2%;
    grid-template-columns: 5;
}
.titleBox5:hover{
    background-color: #62C3D4;
    color: black;
}
    

.container1{
    display: grid;
    justify-content: center;
    background-image: linear-gradient(rgb(52, 212, 218), rgb(81, 218, 149)); 
}

.container1 img{
    height: 450px;
    width: 850px;
}

.section1{
    display: flex;
    color: black;
    justify-content: flex-end;
    font-weight: bolder;
    font-size: 15px;
    padding-right: 350px;
}

.section1 ul{
    display: flex;
    justify-content: flex-end;
}

.section1 li{
    position: relative;
    padding: 2px 2px;

}

.ytVideo{
    padding-top: 40px;
    position: relative;
    width: 100%;
    height: "0";
    text-align: center;
}

.section2{
color: black;
}

.section2 h2{
    color: #db9509;
}

button{
    background-color: #FBBE43;;
    border: white;
    font-size: 18px;
    font-family: sans-serif;
    padding: 24px 42px;
    border-radius: 5px;
}
button:hover{
    background-color: transparent;
    border: 2px solid;
    color: #db9509;
}

.section3{
    display: grid;
    color: aliceblue;
    text-align: center;
    padding-top: 100px;
    padding-bottom: 100px;
}

.section3 h1{
    color: black;
    font-size: 40px;
    padding-bottom: 2%;
}


.boxSet{
    display: grid;
    position: relative;
    grid-template-columns: repeat(auto-fit, minmax(50px, 220px));
    grid-template-rows: 220px 220px 220px;
    justify-content: center;
    font-size: 20px;
    line-height: 10px;
    filter: brightness(100%);
}


.boxSet .box1{
    text-align: left;
    background-color: #CF364C;
    grid-column: 1;
    padding-top: 50px;
    padding-left: 70px;
}

.boxSet .box2{
    text-align: left;
    background-color: #E38091;
    padding-top: 50px;
    padding-left: 70px;
}

.boxSet .box3{
    text-align: left;
    background-color: #F07F3C;
    grid-column: 2;
    padding-top: 50px;
    padding-left: 70px;

}

.boxSet .box4{
    text-align: left;
    background-color: #FBBE43;
    grid-column: 3;
    padding-top: 50px;
    padding-left: 70px;
}

.boxSet .box5{
    text-align: left;
    background-color: #77C2A3;
    grid-column: 3;
    padding-top: 50px;
    padding-left: 70px;
}

.boxSet .box6{
    text-align: left;
    background-color: #62C3D4;
 
    grid-column: 4;
    padding-top: 30px;
    padding-left: 50px;
}

.boxSet .box1:hover,
.boxSet .box2:hover,
.boxSet .box3:hover,
.boxSet .box4:hover,
.boxSet .box5:hover,
.boxSet .box6:hover
{
    filter: brightness(80%);
}


.section4{
    background-color: #4A3343;
    display: grid;
    grid-template-columns: 6fr 6fr;
    font-size: 130%;
}

.section4 .container2 img{
    position: relative;
    height: 100%;
    width: 100%;
}

.section4 .sec4Labels{
    text-align: left;
    width: 60%;
    padding-top: 20%;
    padding-left: 5%;
    line-height: 30px;
}

.section4 h1{
    color: #FBBE43;
}

.section4 button{
    display: flex;
    flex-direction: row;
    padding: 24px 42px;
    border-radius: 5px;
    margin-top: 5%;
}

.section5{
    background-color: #77C2A3;
    position: relative;
    color: white;
    font-size: 25px;
    font-family: "NeogroteskPro",sans-serif;
    line-height: 10px;
    padding-top: 150px;
    padding-bottom: 100px;
}

.section6{
    color: black;
    padding-bottom: 50px;
    padding-top: 50px;
    font-family: "NeogroteskPro",sans-serif;
}

.section6 h3{
    font-size: 30px;
    color: #4A3343;
    padding-bottom: 40px;
}

.section6 .gridContainer3{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(50px, 300px));
    grid-template-rows: 300px 300px 300px;
      justify-content: center;
}

.gridContainer3 .box1{
    grid-column: 1;
    background-image: url("https://web.archive.org/web/20220813043714if_/https://res.cloudinary.com/dggvwzqm9/image/upload/g_faces,c_fill,h_350,w_350/v1656058907/matariki2022/inbound1847181012048137900_jt3wvx.jpg");
    background-size: 300px;
}

.gridContainer3 .box2{
    grid-column: 2;
    background-color: #FBBE43;
}

.gridContainer3 .box3{
    grid-column: 3;
    background-image: url("https://web.archive.org/web/20220813043714/https://res.cloudinary.com/dggvwzqm9/image/upload/g_faces,c_fill,h_350,w_350/v1656045501/matariki2022/inbound1363354736459001191_lap3vt.jpg");
    background-size: 300px;
    background-color: #77C2A3;
}

.gridContainer3 .box4{
    grid-column: 4;
    background-image: url("https://web.archive.org/web/20220815040712/https://res.cloudinary.com/dggvwzqm9/image/upload/g_faces,c_fill,h_350,w_350/v1656021447/matariki2022/B591F57C-B554-4139-9FE1-4657E1FFB377_h0jo5o.jpg");
    background-size: 300px;
}

.gridContainer3 .box5{
    grid-column: 1;
    grid-row: 2;
    background-color:rgb(206, 61, 61);
}

.gridContainer3 .box6{
    grid-column: 2;
    grid-row: 2;
    background-color:rgb(218, 125, 156);
}

.gridContainer3 .box7{
    grid-column: 3;
    grid-row: 2;
    background-color: rgb(235, 135, 53);
}

.gridContainer3 .box8{
    grid-column: 4;
    grid-row: 2;
    background-image: url("https://web.archive.org/web/20220813043714/https://res.cloudinary.com/dggvwzqm9/image/upload/g_faces,c_fill,h_350,w_350/v1655797555/matariki2022/F723039A-9FF9-4E3D-8C36-FD46587100F2_kl3eyb.jpg");
    background-size: 300px;
}

.gridContainer3 .box9{
    grid-column: 1;
    grid-row: 3;
    background-color:#77C2A3 ;
}


.hideBox1,
.hideBox2,
.hideBox3,
.hideBox4,
.hideBox8
{
    display: none;
}

.box1:hover .hideBox1,
.box2:hover .hideBox2,
.box3:hover .hideBox3,
.box4:hover .hideBox4,
.box8:hover .hideBox8
{
    box-sizing: border-box;
    display: block;
    text-align: left;
    color: white;
    height: auto;
    font-size: 25px;
    line-height: 10px;
    padding-left: 20px;
    padding-top: 10px;
    height: 100%; 
}
.box1:hover .hideBox1{
    background-color: rgba(207, 115, 9, 0.7);
}

.box3:hover .hideBox3{
    background-color: rgba(119, 194, 163, 0.7);
}

.box4:hover .hideBox4{
    background-color: rgba(98, 195, 212, 0.7);
}
.box8:hover .hideBox8{
    background-color: rgba(251, 190, 67, 0.7);
}

.box5,
.box6,
.box7,
.box9{
    box-sizing: border-box; 
    text-align: left;
    color: white;
    height: auto;
    font-size: 25px;
    line-height: 10px;
    padding-left: 20px;
    padding-top: 10px;
    height: 100%; 
}
.box2:hover,
.box5:hover,
.box6:hover,
.box7:hover,
.box9:hover{
    filter: brightness(70%);
}

.section7{
    background-color: #4A3343;
    line-height: 5px;
    font-size: 18px;
    width: 100%;
    padding-top: 70px;
    padding-bottom: 100px;
    }

.section7 h2{
    color: black;
    color: #FBBE43;
    font-size: 50px;
    
}

.section8{
    color: black;
}

.section9{
    display: grid;
    grid-template-columns: 6fr 6fr;
    width: 100%;
    color: black;
    text-align: left;
    height: 45vh;
    font-size: 20px;
    line-height: 20%;

}

.section9 h2{
    font-size: 50px;
    
}

.section9 .part1{
    box-sizing: border-box;
    background-color: rgba(98, 195, 212, 1);
    color: aliceblue;
    width: 100%;
    padding-left: 30%;
    padding-top: 10%; 
}

.section9 .part2{
    background-color:  rgba(207, 54, 76, 1);
    color: aliceblue; 
    width: 100%;
    padding-left: 30%;
    padding-top: 10%;
}

.part1:hover{
    background-color: rgba(79, 157, 171, 1);
}
.part2:hover{
    background-color:  rgba(165, 43, 60, 1);
}


.section10{
    display: grid;
    grid-template-columns: 3fr 3fr;
    background-color: #4A3343;
    padding-right: 40%;
}

.section10 a{
    color: aliceblue;
    text-decoration: none;
}

.section10 h3{
    color: #FBBE43;
    position: relative;
}

ul{
    list-style: none;
    text-align: left;
    width: 100%;
    padding-left: 35%;
}

footer{
   background-color: #4A3343; 
   
}

